grid overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -59,8 +59,8 @@
   width: 100%;
   grid-column-gap: 8px;
   grid-row-gap: 8px;
-  overflow: auto;
-  padding: 8px;
+  overflow: hidden;
+  padding-bottom: 8px;
 }
 .optionButton {
   display: flex;
